--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lucide-react": "^0.456.0",
     "mailparser": "^3.7.1",
     "moment": "^2.30.1",
+    "mongodb": "^6.12.0",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
     "next-intl": "^3.25.0",
